2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fill SolverError with a complete message in CFSQP bridge.
	* src/cfsqp.cc: Put a real error message into returned SolverErro.
	* src/ipopt.cc: Enfore 80 columns.
	* tests/cfsqp.cc: Print error if necessary.
	* tests/cfsqp.stdout: Regenerate output.
	* tests/ipopt.cc: Print error if necessary.
	* tests/simple-test.cc: Print returned error.
	* tests/simple-test.stdout: Regenerate output.

2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix documentation style.
	* doc/Doxyfile.in: Add new stylesheets.
        Remove collaboration diagram.
	* doc/Makefile.am: Distribute new stylesheets.
	* doc/doxygen.css: New.
	* doc/tabs.css: New.

2009-04-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Add m in Function (represents the result's size).
	* include/Makefile.am: Distribute new headers.
	* include/liboptimization/derivable-function.hh:
        Add m to constructor.
	* include/liboptimization/function.hh: Add m, the
        size of the result, change operator () signature.
	* include/liboptimization/generic-solver.hh: Fix includes.
	* include/liboptimization/linear-function.hh: Add m to
        constructor.
	* include/liboptimization/numeric-linear-function.hh: Set
        m to 1.
	* include/liboptimization/numeric-quadratic-function.hh: Set
        m to 1.
	* include/liboptimization/quadratic-function.hh: Add m to
        constructor.
	* include/liboptimization/result-with-warnings.hh: Split result.hh.
	* include/liboptimization/result.hh: Split result.hh.
	* include/liboptimization/twice-derivable-function.hh: Add m
        to constructor.
	* src/cfsqp.cc: Fix bridge to handle m (only care
        about first value of the result for now).
	* src/derivable-function.cc: Add m to constructor.
	* src/function.cc: Add m to constructor.
	* src/ipopt.cc: Fix bridge to handle m (only care
        about first value of the result for now).
	* src/linear-function.cc: Add m to constructor.